wip: patching genesis

--- a/configuredChains.yaml
+++ b/configuredChains.yaml
@@ -609,9 +609,9 @@ neutron:
   bin: neutrond
   bech32-prefix: neutron
   denom: untrn
-  gas-prices: 0.001untrn
+  gas-prices: 0.01untrn
   gas-adjustment: 1.1
-  trusting-period: 96h
+  trusting-period: "1197504s"
   images:
     - repository: ghcr.io/strangelove-ventures/heighliner/neutron
       uid-gid: 1025:1025
