--- a/configuredChains.yaml
+++ b/configuredChains.yaml
@@ -609,13 +609,13 @@ neutron:
   bin: neutrond
   bech32-prefix: neutron
   denom: untrn
-  gas-prices: 0.01untrn
-  gas-adjustment: 1.1
+  gas-prices: 0.0untrn
+  gas-adjustment: 1.3
   trusting-period: "1197504s"
   images:
     - repository: ghcr.io/strangelove-ventures/heighliner/neutron
       uid-gid: 1025:1025
-  no-host-mount: true
+  no-host-mount: false
 
 rizon:
   name: rizon
